--- a/ToolCRM/Views/Home/Index.cshtml
+++ b/ToolCRM/Views/Home/Index.cshtml
@@ -54,7 +54,7 @@
 </div>
 
 <!-- Main Features -->
-<div class="row">
+<div class="row" id="contentdiv">
     <!-- File Upload Section -->
     <div class="col-lg-8 mb-4">
         <div class="card">
