--- a/ToolCRM/Views/Shared/_Layout.cshtml
+++ b/ToolCRM/Views/Shared/_Layout.cshtml
@@ -14,9 +14,10 @@
         }
         .sidebar {
             position: fixed;
-            top: 0;
+            top: 48px;
             bottom: 0;
             left: 0;
+            width: 240px;
             z-index: 100;
             padding: 0;
             box-shadow: inset -1px 0 0 rgba(0, 0, 0, .1);
@@ -63,6 +64,8 @@
         .main-content {
             margin-left: 240px;
             padding: 20px;
+            min-height: calc(100vh - 48px);
+            margin-top: 0;
         }
         .navbar-brand {
             padding: 0.75rem 1.5rem;
@@ -72,9 +75,18 @@
             background-color: #1a252f;
         }
         .topbar {
+            position: fixed;
+            top: 0;
+            left: 0;
+            right: 0;
             height: 48px;
             background-color: #34495e;
             border-bottom: 1px solid #2c3e50;
+            z-index: 101;
+            width: 100%;
+        }
+        .navbar-brand {
+            width: 240px;
         }
         @@media (max-width: 767.98px) {
             .sidebar {
@@ -82,6 +94,9 @@
             }
             .main-content {
                 margin-left: 0;
+            }
+            .navbar-brand {
+                width: 100%;
             }
         }
     </style>
